update uploadcard, modified few UI outlets

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,4 +53,9 @@ input::placeholder, textarea::placeholder {
     display: none !important;
   }
 }
+input[type="time"],
+input[type="date"] {
+  max-width: 100%;
+  box-sizing: border-box;
+}
 
